core/stdlib/tests/ui/store_invalid_result_inner.stderr
error: Store derive does not support Result type in Enums
 --> tests/ui/store_invalid_result_inner.rs:5:5
  |
5 |     Var(Result<u64, Error>),
  |     ^^^

error: Store derive does not support Result type in Enums
  --> tests/ui/store_invalid_result_inner.rs:10:5
   |
10 |     Var(anyhow::Result<u64>),
   |     ^^^

error[E0412]: cannot find type `Error` in this scope
 --> tests/ui/store_invalid_result_inner.rs:5:21
  |
5 |     Var(Result<u64, Error>),
  |                     ^^^^^ not found in this scope
  |
help: consider importing one of these items
  |
1 + use std::error::Error;
  |
1 + use std::fmt::Error;
  |
1 + use std::io::Error;
  |
1 + use core::error::Error;
  |
    and 1 other candidate

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/store_invalid_result_inner.rs:11:2
   |
11 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/store_invalid_result_inner.rs`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `anyhow`
  --> tests/ui/store_invalid_result_inner.rs:10:9
   |
10 |     Var(anyhow::Result<u64>),
   |         ^^^^^^ use of unresolved module or unlinked crate `anyhow`
   |
   = help: if you wanted to use a crate named `anyhow`, use `cargo add anyhow` to add it to your `Cargo.toml`
