core/stdlib/tests/ui/store_invalid_result_inner.rs
use stdlib::Store;

#[derive(Store)]
enum Test {
    Var(Result<u64, Error>),
}

#[derive(Store)]
enum Test1 {
    Var(anyhow::Result<u64>),
}
